# laptop_control

./: CMakeLists.txt  README.md  project_info.txt
doc/: module.puml  plugin.puml
laptop_control/: CMakeLists.txt
laptop_control/include/: main.hh
laptop_control/src/: main.cc
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/: config.hh  core.hh  environment.hh  singleton.hh
libs/core/include/module/: entity.hh  holder.hh  module.hh
libs/core/include/plugin/: entity.hh  holder.hh  module.hh  plugin.hh
libs/core/include/reader/: json.hh
libs/core/src/: config.cc  core.cc  environment.cc  singleton.cc
libs/core/src/reader/: json.cc
libs/runner/: CMakeLists.txt
libs/runner/include/: inwriter.hh  outwriter.hh  runner.hh  single_runner.hh  singlerunner.hh
libs/runner/src/: runner.cc  single_runner.cc  singlerunner.cc
modules/: CMakeLists.txt
modules/cpu_thermal/: CMakeLists.txt
modules/cpu_thermal/include/: core.hh  cpu.hh  cpu_package.hh  cpu_thermal.hh
modules/cpu_thermal/src/: cpu_thermal.cc
plugins/: CMakeLists.txt
plugins/cpu_thermal/: CMakeLists.txt
plugins/cpu_thermal/include/: core.hh  cpu.hh  cpu_package.hh  cpu_thermal.hh
plugins/cpu_thermal/src/: cpu_thermal.cc
protos/: cpu_thermal.py
software_updater/: CMakeLists.txt
software_updater/include/: main.hh
software_updater/src/: main.cc
